finished auth and mock data handling

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-PYTHON_CONTAINER_NAME=main
-PYTHON_PORT=8000
-PYTHON_PORT_OUTER=8010
 PYTHON_JWT_SECRET=12345
 PYTHON_EMAIL_SECRET=1111111111111111111111111111111=
 PYTHON_NAME_SECRET=1111111111111111111111111111111=
+PYTHON_ACCESS_LEVEL_SECRET=1111111111111111111111111111111=
+PYTHON_USERNAME_SECRET=1111111111111111111111111111111=
+PYTHON_VERBOSE=0
 
 POSTGRES_CONTAINER_NAME=db
 POSTGRES_PORT=5432
