--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "fastapi (>=0.121.3,<0.122.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
+    "jinja2 (>=3.1.6,<4.0.0)",
 ]
 
 
