--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ PYTHON_EMAIL_SECRET=1111111111111111111111111111111=
 PYTHON_NAME_SECRET=1111111111111111111111111111111=
 PYTHON_ACCESS_LEVEL_SECRET=1111111111111111111111111111111=
 PYTHON_USERNAME_SECRET=1111111111111111111111111111111=
+PYTHON_ADMIN_PASSWORD=12345
+PYTHON_ADMIN_EMAIL=12345@12345.12345
 PYTHON_VERBOSE=0
 
 POSTGRES_CONTAINER_NAME=db
